--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warung-sumatra",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "next": "15.4.6",
+    "next-intl": "3.16.2",
+    "clsx": "2.1.1"
   },
   "devDependencies": {
     "typescript": "^5",
