--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.11.0",
     "clsx": "2.1.1",
     "next": "15.4.6",
     "next-intl": "4.3.4",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
