add capcha & refactor

--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.11.0",
+    "canvas": "2.11.2",
+    "captcha-canvas": "^2.4.1",
     "clsx": "2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.6",
     "next-intl": "4.3.4",
     "nodemailer": "^7.0.5",
